force-app/main/default/objects/Document_Template__c/fields/Applies_to__c.field-meta.xml
<CustomField>
    <fullName>Applies_to__c</fullName>
    <label>Applies to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>