force-app/main/default/objects/Document_Template__c/fields/Category1__c.field-meta.xml
<CustomField>
    <fullName>Category1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category1</label>
    <referenceTo>Document_Template_Category__c</referenceTo>
    <relationshipLabel>Document Templates</relationshipLabel>
    <relationshipName>Document_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>