force-app/main/default/objects/Document_Template__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condition</label>
    <referenceTo>Document__c</referenceTo>
    <relationshipName>Condition_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>