force-app/main/default/objects/Document_Template__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipName>Condition_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>